# pocketwelt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yml  publishing.yml
docs/: Makefile  README.md  conf.py  configs.md  index.md  requirements.txt
docs/_build/doctrees/: colors.doctree  configs.doctree  encodings.doctree  environment.pickle  files.doctree  imports.doctree  index.doctree  logs.doctree  modules.doctree  objects.doctree  paths.doctree  processes.doctree  requirements.doctree
docs/_build/doctrees/modules/: colors.doctree  configs.doctree  encodings.doctree  files.doctree  imports.doctree  index.doctree  logs.doctree  modules.doctree  objects.doctree  paths.doctree  processes.doctree
docs/_build/html/: .buildinfo  colors.html  configs.html  encodings.html  files.html  genindex.html  imports.html  index.html  logs.html  modules.html  objects.html  objects.inv  paths.html  processes.html  requirements.html  search.html  searchindex.js
docs/_build/html/_sources/: index.md.txt  index.rst.txt  objects.md.txt
docs/_build/html/_sources/modules/: colors.md.txt  encodings.md.txt  index.md.txt  objects.md.txt  processes.md.txt
docs/_build/html/modules/: colors.html  configs.html  encodings.html  files.html  imports.html  index.html  logs.html  modules.html  objects.html  paths.html  processes.html
docs/modules/: files.md  imports.md  index.md  logs.md  modules.md  objects.md  paths.md
pocketwelt/: __init__.py  archive.py  colors.py  configs.py  encodings.py  files.py  imports.py  logs.py  modules.py  objects.py  path.py  paths.py  process.py  processes.py
tests/: test_configs.py  test_encodings.py  test_files.py  test_objects.py
